<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.9"
    android:background="@drawable/bg_top"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appwidget_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="2dp"
            android:layout_marginTop="0dp"
            android:contentDescription="Title"
            android:gravity="start"
            android:text="@string/concentration"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/appwidget_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:contentDescription="Title"
            android:gravity="end"
            android:text="Mode"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:baselineAligned="false"
        android:minHeight="30dp"
        android:minWidth="200dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/today_container"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/danger_unknown"
            android:minHeight="30dp"
            android:minWidth="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp"
                android:text="@string/today"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/today_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0sp"
                android:text="@string/level"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/today_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0sp"
                android:text="@string/volume"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tomorrow_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/danger_unknown"
            android:minHeight="30dp"
            android:minWidth="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="0dp"
                android:text="@string/tomorrow"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tomorrow_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0sp"
                android:text="@string/level"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tomorrow_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/volume"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/after_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/danger_unknown"
            android:minHeight="30dp"
            android:minWidth="50dp"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/after"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/after_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0sp"
                android:text="@string/level"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/after_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0sp"
                android:text="@string/volume"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:minHeight="40dp"
            android:minWidth="40dp">

            <ImageButton
                android:id="@+id/updateImageButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:adjustViewBounds="true"
                android:background="@drawable/icon_upd"
                android:contentDescription="TODO"
                android:minHeight="10dp"
                android:minWidth="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/button" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_group"
        android:layout_marginTop="0dp"
        android:background="@drawable/bg_bottom">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="2dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/updated"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="7sp"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </FrameLayout>
</RelativeLayout>